Landing and payment pages updates

--- a/subscription.html
+++ b/subscription.html
@@ -378,65 +378,86 @@
 
 
     <!-- Footer -->
-    <footer id="footer" class="bg-light py-5">
-        <div class="footer-top py-5">
-            <div class="container">
-                <div class="row gy-4">
-                    <div class="col-lg-5 col-md-12 footer-info">
-                        <a href="../index.html" class="logo d-flex align-items-center">
-                            <img src="../public/assets/img/logo.png" alt="FLIPS Logo" style="height: 80px;">
-                        </a>
-                        <p class="mt-3">FLIPS provides innovative solutions for flood monitoring and management, safeguarding communities and enhancing resilience.</p>
-                        <div class="social-links mt-3">
-                            <a href="https://x.com/flipsIntel" class="twitter me-2"><i class="bi bi-twitter" style="color: #7b4d11;"></i></a>
-                            <a href="https://facebook.com/flipsorg" class="facebook me-2"><i class="bi bi-facebook" style="color: #7b4d11;"></i></a>
-                            <a href="https://instagram.com/flips.intel" class="instagram me-2"><i class="bi bi-instagram" style="color: #7b4d11;"></i></a>
-                            <a href="https://linkedin.com/" class="linkedin"><i class="bi bi-linkedin" style="color: #7b4d11;"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-6 footer-links">
-                        <h5>Useful Links</h5>
-                        <ul class="list-unstyled">
-                            <li><i class="small" style=""></i> <a href="../index.html">Home</a></li>
-                            <li><i class="small"></i> <a href="#">About Us</a></li>
-                            <li><i class="small"></i> <a href="#">Services</a></li>
-                            <li><i class="small"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="small"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-6 footer-links">
-                        <h5>Our Services</h5>
-                        <ul class="list-unstyled">
-                            <li><i class="bi bi-chevron-right"></i> <a href="#">Flood Prediction</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#">Data Analytics</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#">Risk Assessment</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#">Community Engagement</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#">Educational Outreach</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 col-md-12 footer-contact">
-                        <h5>Contact Us</h5>
-                        <p>Nairobi, Kenya<br><br>
-                            <strong>Phone:</strong> +254 700 168 812<br>
-                            <strong>Email:</strong> flipsintelligence@gmail.com<br>
-                        </p>
-                        <div class="social-links mt-3">
-                            <a href="https://x.com/flipsIntel" class="twitter me-2"><i class="bi bi-twitter"></i></a>
-                            <a href="https://facebook.com/flipsorg" class="facebook me-2"><i class="bi bi-facebook"></i></a>
-                            <a href="https://instagram.com/flips.intel" class="instagram me-2"><i class="bi bi-instagram"></i></a>
-                            <a href="https://linkedin.com/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <footer class="bg-light py-5 border-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-md-2 mb-3">
+          <h6 class="fw-bold">Services</h6>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Data collection</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Software</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small  text-decoration-none">Predictions</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Forecasting</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Alert & notifications</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Mitigation planning</a></li>
+          </ul>
         </div>
-        <div class="container text-center py-3">
-            © Copyright <strong>FLIPS</strong>. All Rights Reserved.
+        <div class="col-6 col-md-2 mb-3">
+          <h6 class="fw-bold">Education</h6>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Academic analysis</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Collaboration opportunities</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small  text-decoration-none">Learning simulations</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Disaster management training</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Flood risks awareness</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Data for research</a></li>
+          </ul>
         </div>
-    </footer>
+        <div class="col-6 col-md-2 mb-3">
+          <h6 class="fw-bold">Business</h6>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Property damage forecasting</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Supply chain risk analysis</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small  text-decoration-none">Insurance claim estimation</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Logistic route optimization</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Alerts for assets & Infrastructure</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Business continuity planning</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md-2 mb-3">
+          <h6 class="fw-bold">Developer & IT</h6>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">GIS & mapping data layer</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">IoT device data fusion</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small  text-decoration-none">Predictive analytics integration</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Custom dashboard development</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Real time data export (JSON, CSV)</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Model training on proprietary datasets</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md-2 mb-3">
+          <h6 class="fw-bold">Company</h6>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Crisis communication system</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small text-decoration-none">Smart infrastructure planning</a></li>
+            <li class="mb-2"><a href="#" class="text-muted small  text-decoration-none">Disaster response coordination</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="d-flex flex-wrap justify-content-between align-items-center mt-4 border-top pt-3">
+        <div class="d-flex align-items-center mb-2">
+          <a href="#" class="me-3 small text-muted text-decoration-none"><i class="bi bi-globe"></i> English (United States)</a>
+          <a href="#" class="me-3 small text-muted text-decoration-none"><i class="bi bi-shield-check"></i> Your Privacy Choices</a>
+          <a href="#" class="me-3 small text-muted text-decoration-none">Consumer Health Privacy</a>
+        </div>
+        <div class="d-flex flex-wrap align-items-center mb-2">
+          <a href="#" class="me-3 small text-muted text-decoration-none">Sitemap</a>
+          <a href="#" class="me-3 small  text-muted text-decoration-none">Contact FLIPS</a>
+          <a href="#" class="me-3 small text-muted text-decoration-none">Privacy</a>
+          <a href="#" class="me-3 small text-muted text-decoration-none">Terms of use</a>
+          <a href="#" class="me-3 small text-muted text-decoration-none">Trademarks</a>
+          <a href="#" class="me-3 small text-muted text-decoration-none">Safety & eco</a>
+          <span class="text-muted">© FLIPS 2025</span>
+        </div>
+      </div>
+    </div>
+<!--    <button id="chatButton" class="btn btn-dark position-fixed bottom-0 end-0 mb-3 me-3 rounded-pill">-->
+<!--      <i class="bi bi-person-circle me-2"></i>Need help? Let's chat-->
+<!--    </button>-->
+  </footer>
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-primary back-to-top position-fixed bottom-0 end-0 m-3"><i class="bi bi-arrow-up-short"></i></a>
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center" style="background: #7b4d11;"><i class="bi bi-arrow-up-short"></i></a>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
