--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted fw-bold" href="login/register.html">Get Started</a>
+      <a class="btn-getstarted fw-bold" href="login/login.html">Get Started</a>
     </div>
   </header>
 
@@ -156,7 +156,7 @@
             <h2 class="about-title">Flood Impact Prediction System (FLIPS)</h2>
             <p class="about-description">
               FLIPS redefines environmental data management with real-time flood predictions and river water level monitoring.
-              <a href="market/index.html" class="text-primary fw-semibold text-decoration-none">Learn More →</a>
+              <a href="market/service_page.html" class="text-primary fw-semibold text-decoration-none">Learn More →</a>
             </p>
             <div class="row feature-list-wrapper">
               <div class="col-md-6">
@@ -573,7 +573,7 @@
               <div>
                 <h3>Real-Time Data</h3>
                 <p>Access live updates on river water levels, air quality, and flood risks for timely decisions.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="/market/service_page.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -586,7 +586,7 @@
               <div>
                 <h3>Geographical Data</h3>
                 <p>Utilize detailed mapping solutions to visualize flood-prone areas and environmental trends.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="/market/service_page.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -599,7 +599,7 @@
               <div>
                 <h3>Data Analysis</h3>
                 <p>Leverage advanced analytics to interpret environmental data for strategic planning.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="/market/service_page.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -612,7 +612,7 @@
               <div>
                 <h3>Water Management</h3>
                 <p>Optimize water resource management with insights from real-time environmental data.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="/market/service_page.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
