--- a/subscription.html
+++ b/subscription.html
@@ -66,14 +66,11 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../login/login.html">Sign In</a>
-            </li>
 
             <!-- Buttons -->
-            <li class="nav-item">
-              <a href="../login/register.html" class="btn p-2 text-white fw-bold rounded-pill px-4" style="background: #7b4d11; border: 3px solid #968B71;">Get Started For Free</a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--              <a href="../login/register.html" class="btn p-2 text-white fw-bold rounded-pill px-4" style="background: #7b4d11; border: 3px solid #968B71;">Get Started For Free</a>-->
+<!--            </li>-->
             <li class="nav-item">
               <a href="#" class="btn p-2 fw-bold rounded-pill px-4" style="background: #968B71; color: #7b4d11;">Contact Sales</a>
             </li>
