--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
         <img src="assets/img/logo.png" alt="">
       </a>
       <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="#hero" class="nav-link fw-bold active">Home</a></li>
-          <li><a href="#about" class="nav-link fw-bold">About</a></li>
-          <li><a href="#features" class="nav-link fw-bold">Features</a></li>
-          <li><a href="#services" class="nav-link fw-bold">Services</a></li>
-          <li><a href="#pricing" class="nav-link fw-bold">Pricing</a></li>
-          <li><a href="#contact" class="nav-link fw-bold">Contact</a></li>
-        </ul>
+  <ul>
+    <li><a href="#hero" class="nav-link fw-bold active">Home</a></li>
+    <li><a href="#about" class="nav-link fw-bold">About</a></li>
+    <li><a href="about-water.html" class="nav-link fw-bold">About Water</a></li>
+    <li><a href="about-ai.html" class="nav-link fw-bold">About AI</a></li>
+    <li><a href="#features" class="nav-link fw-bold">Features</a></li>
+    <li><a href="#services" class="nav-link fw-bold">Services</a></li>
+    <li><a href="#pricing" class="nav-link fw-bold">Pricing</a></li>
+    <li><a href="#contact" class="nav-link fw-bold">Contact</a></li>
+  </ul>
+
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
       <a class="btn-getstarted fw-bold" href="login/login.html">Get Started</a>
