individual and business

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <!-- Business Use Case -->
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="use-case-card card">
-              <img src="assets/img/business-use-case.jpg" class="card-img-top" alt="Business Use Case">
+              <img src="assets/img/business.jpg" class="card-img-top" alt="Business Use Case">
               <div class="card-body">
                 <h4 class="card-title">For Businesses</h4>
                 <p class="card-text">
@@ -204,7 +204,7 @@
           <!-- Personal Use Case -->
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="use-case-card card">
-              <img src="assets/img/personal-use-case.jpg" class="card-img-top" alt="Personal Use Case">
+              <img src="assets/img/individual.jpg" class="card-img-top" alt="Personal Use Case">
               <div class="card-body">
                 <h4 class="card-title">For Individuals</h4>
                 <p class="card-text">
